objects/JBCXM__SponsorTrackingHistory__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>STHAccount</relationshipLabel>
        <relationshipName>STHAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ChangedAttribute__c</fullName>
        <label>ChangedAttribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>company</fullName>
                </value>
                <value>
                    <fullName>location</fullName>
                </value>
                <value>
                    <fullName>title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>STHContact</relationshipLabel>
        <relationshipName>STHContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>STHCustomer</relationshipLabel>
        <relationshipName>STHCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__OldValue__c</fullName>
        <label>ContactValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__PreviousValue__c</fullName>
        <label>PreviousValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SponsorTracking__c</fullName>
        <label>SponsorTracking</label>
        <referenceTo>JBCXM__SponsorTracking__c</referenceTo>
        <relationshipLabel>SponsorTrackingHistory</relationshipLabel>
        <relationshipName>SponsorTrackingHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SponsorTrackingHistory</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SponsorTrackingHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SponsorTrackingHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>